--- a/OdeToFood/Pages/Restaurants/Detail.cshtml
+++ b/OdeToFood/Pages/Restaurants/Detail.cshtml
@@ -17,5 +17,9 @@
     Cuisine: @Model.Restaurant.Cusine
 </div>
 
+@if(Model.Message != null)
+{
+    <div class="alert alert-info">@Model.Message</div>
+}
 <a asp-page="./List" class="btn btn-default">All Restaurants</a>
 
